<resources>
    <string name="app_name">Alexandrite</string>
    <string name="menu">Menu</string>
    <string name="preferences">SharedPreferences</string>
    <string name="databases">Databases</string>
    <string name="files">Files</string>
    <string name="preference_details">Store private primitive data in key-value pairs.</string>
    <string name="databases_details">Store structure data in a private database.</string>
    <string name="files_details">Store private data on the device memory and public data on the shared external storage.</string>

    <string name="save">Save</string>
    <string name="value_1">Value 1</string>
    <string name="value_2">Value 2</string>
    <string name="value_3">Value 3</string>
    <string name="details">Details</string>

    <string name="home_intro">Exploit all methods to save data on a device.</string>

    <string name="singlePreference">Single</string>
    <string name="multiplePreferences">Multiple</string>

    <string name="multiple_preference_id">com.diamond.diamond.MULTIPLE_PREFERENCES</string>
    <string name="value_1_id">com.diamond.diamond.VALUE_1</string>
    <string name="value_2_id">com.diamond.diamond.VALUE_2</string>
    <string name="value_3_id">com.diamond.diamond.VALUE_3</string>
    <string name="no_data">No Data</string>

    <string name="file_name">File Name</string>
    <string name="file_content">File Content</string>

    <string name="directory">Storage Directories</string>
    <string name="folder">Root:</string>
    <string name="local">Internal</string>
    <string name="sdcard_public">External Public</string>
    <string name="sdcard_private">External Private</string>

    <string name="external_emulated">External Storage Emulated: </string>
    <string name="external_readable">External Readable: </string>
    <string name="external_writable">External Mounted: </string>
    <string name="external_cache">Click to check external caching</string>
    <string name="internal_cache">Click to check internal caching </string>

    <string name="external_storage_error">External storage not readable or not attached</string>

    <string name="internalCachingSuccess">Internal Caching Passed!</string>
    <string name="externalCachingSuccess">External Caching Passed!</string>
    <string name="internalCachingFailed">Internal Caching Failed!</string>
    <string name="externalCachingFailed">External Caching Failed!</string>

    <string name="feed_form_title">Create Database Feed</string>
    <string name="title">Title</string>
    <string name="subtitle">Sub-Title</string>

</resources>
