<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/singlePreference"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value1Text"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/value_1"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        app:layout_constraintRight_toLeftOf="@+id/saveSingleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/multiplePreferences"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value1Text" />

    <EditText
        android:id="@+id/value2Text"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/value_2"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/saveSingleButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/value1Text"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/value3Text"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/value_3"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/saveMultipleButton"
        app:layout_constraintTop_toBottomOf="@+id/value2Text" />

    <Button
        android:id="@+id/saveMultipleButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginRight="24dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="11sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/value3Text"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>