<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/value_1"
        android:textAllCaps="false"
        android:textColor="@color/textListTitle"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/value_2"
        android:textAllCaps="false"
        android:textColor="@color/textListTitle"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/value_3"
        android:textAllCaps="false"
        android:textColor="@color/textListTitle"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/value1View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/textListValue"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/value2View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/textListValue"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintLeft_toLeftOf="@+id/value1View"
        app:layout_constraintRight_toRightOf="@+id/value1View" />

    <TextView
        android:id="@+id/value3View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/textListValue"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
        app:layout_constraintLeft_toLeftOf="@+id/value2View"
        app:layout_constraintRight_toRightOf="@+id/value2View" />
</android.support.constraint.ConstraintLayout>