<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diamond.diamond.Files">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraintLayout2">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/file_name"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background_normal"
            android:ems="10"
            android:hint="@string/file_content"
            android:inputType="textMultiLine"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/editText"
            app:layout_constraintRight_toRightOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="@+id/editText2"
            app:layout_constraintRight_toRightOf="@+id/editText2"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/cardColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/directory"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/textNormal"
                android:textSize="15sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/local"
                android:textColor="@color/textListTitle"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/mainTitle"
                app:layout_constraintRight_toRightOf="@+id/mainTitle"
                app:layout_constraintTop_toBottomOf="@+id/mainTitle"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/subTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="-1dp"
                android:text="@string/folder"
                android:textColor="@color/textListValue"
                android:textSize="10sp"
                app:layout_constraintLeft_toLeftOf="@+id/title"
                app:layout_constraintRight_toRightOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/localDirectoryTree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3sp"
                android:text="@string/no_data"
                android:textColor="@color/textListValue"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/subTitle"
                app:layout_constraintRight_toRightOf="@+id/subTitle"
                app:layout_constraintTop_toBottomOf="@+id/subTitle" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="@string/sdcard"
                android:textColor="@color/textListTitle"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/title"
                app:layout_constraintRight_toRightOf="@+id/title"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/localDirectoryTree"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/subTitle2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/folder"
                android:textColor="@color/textListValue"
                android:textSize="10sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/title2"
                app:layout_constraintRight_toRightOf="@+id/title2"
                app:layout_constraintTop_toBottomOf="@+id/title2" />

            <TextView
                android:id="@+id/sdDirectoryTree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3sp"
                android:text="@string/no_data"
                android:textColor="@color/textListValue"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/subTitle2"
                app:layout_constraintRight_toRightOf="@+id/subTitle2"
                app:layout_constraintTop_toBottomOf="@+id/subTitle2"
                app:layout_constraintHorizontal_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
