<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.diamond.alexandrite.Home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alexandrite"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textNormal"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="32dp"
        android:text="@string/home_intro"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="jelly_bean" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-1dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="goToPreferences"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/preferences"
            android:textAlignment="viewStart"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/databases"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif-condensed"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/files"
            android:textColor="#fff"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:text="@string/preference_details"
            android:textColor="@color/textDetails"
            android:textSize="11sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:text="@string/databases_details"
            android:textColor="@color/textDetails"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:ellipsize="none"
            android:text="@string/files_details"
            android:textColor="@color/textDetails"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView5"
            app:layout_constraintRight_toRightOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:onClick="goToDatabases"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintRight_toLeftOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.36"
        app:srcCompat="@drawable/database" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="0dp"
        android:onClick="goToPreferences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="0dp"
        android:onClick="goToFiles"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/files" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:onClick="goToPreferences"
        android:text="@string/preferences"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        app:layout_constraintRight_toRightOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:onClick="goToDatabases"
        android:text="@string/databases"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:onClick="goToFiles"
        android:text="@string/files"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView16"
        app:layout_constraintLeft_toLeftOf="@+id/imageView4"
        app:layout_constraintRight_toRightOf="@+id/imageView4" />

</android.support.constraint.ConstraintLayout>
